# llamacpp-chat

./: .gitignore  Cargo.toml  README.md  models.json
.agent/rules/: project-architecture.md  rust-conventions.md
.agent/workflows/: generate-tests.md
client/: Cargo.toml
client/src/: main.rs
docs/: AGENT_CONTEXT.md  ARCHITECTURE.md  ROADMAP.md
server/: Cargo.toml
server/src/: config.rs  main.rs  openai.rs  process.rs
shared/src/: lib.rs
